[package]
name = "ln-types"
version = "0.1.2"
authors = ["Martin Habovstiak <martin.habovstiak@gmail.com>"]
edition = "2018"
description = "Common types related to Lightning Network"
repository = "https://github.com/Kixunil/ln-types"
readme = "README.md"
keywords = ["lightning", "network", "newtypes"]
categories = ["cryptography::cryptocurrencies", "encoding", "rust-patterns", "value-formatting"]
license = "MITNFA"

[package.metadata.docs.rs]
features = ["serde", "secp256k1/bitcoin_hashes", "bitcoin/use-serde", "postgres-types", "parse_arg"]
rustc-args = ["--cfg", "docsrs"]

[features]
postgres-types = ["postgres-types-real", "bytes"]

[dependencies]
serde = { version = "1.0.130", optional = true }
# Warning: don't depend on this as a feature!
postgres-types-real = { package = "postgres-types", version = "0.2.2", optional = true }
parse_arg = { version = "0.1.4", optional = true }
bitcoin = { version = "0.27.1", optional = true }
secp256k1 = { version = "0.20.3", optional = true }
slog = { version = "2.7.0", optional = true }

# Warning: don't depend on this as a feature!
bytes = { version = "1.1.0", optional = true }
